# hebiros_experiments

force_feedback_tests/: CMakeLists.txt  package.xml
force_feedback_tests/launch/: load_urdf_onto_ros_param_server.launch  spawn_urdf_in_gazebo.launch  test_01_block_a_position_sim.launch  test_02_block_a_position_real.launch  test_03_block_a_effort_sim.launch  test_04_block_a_effort_real.launch  test_07_pendulum_a_effort_sim.launch  test_08_pendulum_a_effort_real.launch  test_09_spinner_and_obstacle_a_effort_sim.launch  test_10_spinner_and_obstacle_a_effort_real.launch  test_11_pendulum_b_effort_sim.launch
force_feedback_tests/scripts/: effort_ctrl.py  position_ctrl.py
force_feedback_tests/urdf/: block_a.urdf  pendulum_a.urdf  pendulum_b.urdf  spinner_and_obstacle_a.urdf
force_feedback_tests/urdf/meshes/: hebi_x5_9_15z_prt.stl
